[package]
name = "not-oblivion-xml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[[bin]]
name = "nox-sample"
path = "sample/main.rs"

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }
